hi, this is me committing changes

--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -1,7 +1,7 @@
 @import"normalize";
 @import"fonts";
 
-$vox-blue: #6d98a8;
+$vox-blue: #ff98a8;
 $vox-yellow: #fff200;
 $vox-grey: #f1f3f2;
 $vox-black: #4c4e4d;
