--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,11 +8,11 @@ title: "Voxdotcom Style Guide"
     <!--hr /-->
     <div class="m-colum_container clear">
       <div class="m-colum_one">
-        <h3><%= link_to 'Logo', '../logo.html' %></h3>
+        <h3><a href="logo.html">Logo</a></h3>
         <p>Test text...something should be said here but I dont know what</p>
       </div>
       <div class="m-colum_two">
-        <h3><%= link_to 'Typography', '../typography.html' %></h3>
+        <h3><a href="typography.html">Typography</a></h3>
         <p>Test text...something should be said here but I dont know what. Test text...something should be said here but I dont know what</p>
       </div>
       <div class="m-colum_three">
