hi, this is me committing changes

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,7 +21,7 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Voxdotcom Style Guide" %></title>
 
-    <%= stylesheet_link_tag "styles" %>
+    <%= stylesheet_link_tag "style" %>
     <%= javascript_include_tag  "all" %>
   </head>
 
